[package]
name = "spiderman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }
shellexpand = "3.0.0"
toml = "0.5.10"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
