[package]
name = "spiderman-project-manager"
version = "1.0.3"
edition = "2021"
authors = ["Moritz F. Kuntze <spiderman@zortac.net>"]
description = "The Weaving Project Manager"
license = "MIT"
repository = "https://github.com/ZortacDev/spiderman/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
fs_extra = "1.2.0"
itertools = "0.10.5"
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }
shellexpand = "3.0.0"
toml = "0.5.10"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

[[bin]]
name = "spiderman"
path = "src/main.rs"